[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fragment-sdk"
dynamic = ["version"]
description = "Official Python client for the Fragment (GramStack) REST API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Fragment" }]
keywords = ["fragment", "gramstack", "telegram", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/fragment/fragment-python"
Repository = "https://github.com/fragment/fragment-python"
Issues = "https://github.com/fragment/fragment-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.version]
path = "src/fragment/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fragment"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["fragment"]

[tool.ruff.lint.isort]
known-first-party = ["fragment"]
